--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"ZhongQi的博客",
+    "subTitle":"希望这些文字可以证明我来过这个世界",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/76236177?v=4",
     "GMEEK_VERSION":"last"
 }
